--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,15 +14,15 @@ jobs:
       # Checkout the code as the first step.
       - checkout
       # Then simply use the dotnet container as you'd expect and run your tests
-       - run:
-          name: print dir
-          command: ls
-      - run:
-          # Update this line with the directory that contains your tests project file
-          working_directory: ~/ScraperFunction
-          name: Run tests
-          command: |
-            dotnet test
+      -run:
+        name: directories
+        command: dir
+      # - run:
+          # # Update this line with the directory that contains your tests project file
+          # working_directory: ~/ScraperFunction
+          # name: Run tests
+          # command: |
+            # dotnet test
             
 
 workflows:
