--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
       # Then simply use the dotnet container as you'd expect and run your tests
       - run:
         name: directories
-        command: dir
+        command: ls
       - run:
           # Update this line with the directory that contains your tests project file
            working_directory: ~/ScraperFunction
