--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
             command: ls
       - run:
           # Update this line with the directory that contains your tests project file
-           working_directory: ~/ScraperFunction.Test
+           working_directory: ScraperFunction.Test
            name: Run tests
            command: |
              dotnet test 
