--- a/ScraperFunction/ScraperFunction.csproj
+++ b/ScraperFunction/ScraperFunction.csproj
@@ -4,7 +4,11 @@
     <AzureFunctionsVersion>v3</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.33" />
+    <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.11" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="WindowsAzure.ServiceBus" Version="6.1.1" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
