--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
             command: |
               dotnet publish
       - store_artifacts:
-               path: /bin/Debug/netcoreapp3.1/publish/bin
+               path: /root/project/ScraperFunction/bin/Debug/netcoreapp3.1/publish
 workflows:
   # Below is the definition of your workflow.
   # Inside the workflow, you provide the jobs you want to run, e.g this workflow runs the build-and-test job above.
